# agentic-parse

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.agent/skills/difficult-document-extraction/: SKILL.md
.agent/skills/difficult-document-extraction/references/: automated-extraction.md  schema-patterns.md
.agent/skills/difficult-document-extraction/scripts/: convert_to_images.py  generate_review_interface.py
.agent/skills/python-runner/: SKILL.md
.agent/skills/python-runner/references/: install-uv.md
data/wired-neuralink/sec/: full_transcript.md
data/wired-neuralink/sec/transcripts/: page_001.md  page_002.md  page_003.md  (+3 more)
docs/: Acceptance_Criteria_Approach_B_Workflow.md  ac_fix_status.md  implementation_gap.md  pdf_reading_improvements.md  pipeline_run_report_2026-03-10.md  provider_readiness_report.md  rerunning_pipeline.md
docs/plans/: 2026-03-09-viewer-lite-two-page-refactor-design.md  2026-03-09-viewer-lite-two-page-refactor.md  2026-03-10-entity-names-design.md  2026-03-10-entity-names.md  2026-03-10-entity-registry-viewer-design.md  2026-03-10-entity-registry-viewer.md
scripts/: build_viewer.py  build_viewer_lite.py  reset_pipeline.sh  reset_summaries_entities.py  scalability_report.py  tier_compare.py
src/agentic_parse/: __init__.py  chunk_embed.py  cli.py  config.py  db.py  document_catalogue.py  entities.py  entity_names.py  extract_text.py  ingest.py  llm.py  paystub.py  summarize.py  telemetry.py  utils.py
tests/: test_build_viewer_lite.py  test_document_catalogue.py  test_entity_names.py  test_pipeline.py
