[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-parse"
version = "0.1.0"
description = "Scalable document ETL pipeline with incremental extraction and provenance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3.6",
    "pypdf>=4.0",
    "pymupdf>=1.27.1",
    "pdfminer-six>=20251230",
    "pdfplumber>=0.11.9",
    "pytesseract>=0.3.13",
    "pypdfium2>=5.5.0",
    "pillow>=12.1.1",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
agentic-parse = "agentic_parse.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
